--- a/ERP/templates/partials/left-sidebar.html
+++ b/ERP/templates/partials/left-sidebar.html
@@ -118,6 +118,38 @@
                 <span>Voucher Settings</span>
             </a>
         </li>
+        <li>
+            <a href="javascript: void(0);" class="has-arrow">
+                <i class="fas fa-file-invoice-dollar"></i>
+                <span>Accounts Payable</span>
+            </a>
+            <ul class="sub-menu" aria-expanded="false">
+                {% if user|has_permission:'accounting_purchaseinvoice_add' %}
+                <li>
+                    <a href="{% url 'accounting:vendor_bill_create' %}">
+                        <i class="fas fa-pen-square"></i>
+                        <span>Vendor Bill Entry</span>
+                    </a>
+                </li>
+                {% endif %}
+                {% if user|has_permission:'accounting_appayment_change' %}
+                <li>
+                    <a href="{% url 'accounting:payment_scheduler' %}">
+                        <i class="fas fa-calendar-check"></i>
+                        <span>Payment Scheduler</span>
+                    </a>
+                </li>
+                {% endif %}
+                {% if user|has_permission:'accounting_appayment_view' %}
+                <li>
+                    <a href="{% url 'accounting:vendor_statement' %}">
+                        <i class="fas fa-file-alt"></i>
+                        <span>Vendor Statement</span>
+                    </a>
+                </li>
+                {% endif %}
+            </ul>
+        </li>
         <!-- Tax Authorities -->
         <li>
             <a href="{% url 'accounting:tax_authority_list' %}">
