--- a/ERP/accounting/templates/accounting/department_form.html
+++ b/ERP/accounting/templates/accounting/department_form.html
@@ -22,7 +22,17 @@
                 {% endif %}
 
                 <div class="row">
-                    <div class="col-md-12">
+                    <div class="col-md-4">
+                        <div class="form-group mb-3">
+                            <label for="{{ form.code.id_for_label }}" class="form-label">Code</label>
+                            {{ form.code }}
+                            <div class="form-text">Auto-generated for new departments.</div>
+                            {% if form.code.errors %}
+                            <div class="invalid-feedback d-block">{{ form.code.errors }}</div>
+                            {% endif %}
+                        </div>
+                    </div>
+                    <div class="col-md-8">
                         <div class="form-group mb-3">
                             <label for="{{ form.name.id_for_label }}" class="form-label">Name</label>
                             {{ form.name }}
@@ -30,6 +40,36 @@
                             <div class="invalid-feedback d-block">
                                 {{ form.name.errors }}
                             </div>
+                            {% endif %}
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="form-check mb-3">
+                            {{ form.is_active }}
+                            <label class="form-check-label" for="{{ form.is_active.id_for_label }}">Active</label>
+                            {% if form.is_active.errors %}
+                            <div class="invalid-feedback d-block">{{ form.is_active.errors }}</div>
+                            {% endif %}
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="form-group mb-3">
+                            <label for="{{ form.start_date.id_for_label }}" class="form-label">Start Date</label>
+                            {{ form.start_date }}
+                            {% if form.start_date.errors %}
+                            <div class="invalid-feedback d-block">{{ form.start_date.errors }}</div>
+                            {% endif %}
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="form-group mb-3">
+                            <label for="{{ form.end_date.id_for_label }}" class="form-label">End Date</label>
+                            {{ form.end_date }}
+                            {% if form.end_date.errors %}
+                            <div class="invalid-feedback d-block">{{ form.end_date.errors }}</div>
                             {% endif %}
                         </div>
                     </div>
