--- a/ERP/accounting/templates/accounting/reports/balance_sheet.html
+++ b/ERP/accounting/templates/accounting/reports/balance_sheet.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends "partials/base.html" %}
 {% load i18n %}
 
 {% block title %}{% trans "Balance Sheet" %}{% endblock %}
