--- a/ERP/accounting/templates/accounting/import/journal_import.html
+++ b/ERP/accounting/templates/accounting/import/journal_import.html
@@ -1,6 +1,12 @@
 {% extends "partials/base.html" %}
 
 {% block content %}
-<h1>Journal Import</h1>
-<p>This is a placeholder for the journal import page.</p>
+<div class="main-content">
+    <div class="page-content">
+        <div class="container-fluid">
+            <h1>Journal Import</h1>
+            <p>This is a placeholder for the journal import page.</p>
+        </div>
+    </div>
+</div>
 {% endblock %}
