--- a/ERP/accounting/templates/accounting/payment_scheduler.html
+++ b/ERP/accounting/templates/accounting/payment_scheduler.html
@@ -3,7 +3,9 @@
 {% block title %}Payment Scheduler{% endblock %}
 
 {% block content %}
-<div class="container-fluid py-4">
+<div class="main-content">
+    <div class="page-content">
+        <div class="container-fluid py-4">
   <div class="d-flex justify-content-between align-items-center mb-3">
     <div>
       <h1 class="h3 mb-1">Payment Scheduler</h1>
@@ -110,6 +112,8 @@
       <button type="submit" class="btn btn-primary">Create Payment Batch</button>
     </div>
   </form>
+        </div>
+    </div>
 </div>
 {% endblock %}
 
