--- a/ERP/accounting/templates/accounting/reports/ar_aging.html
+++ b/ERP/accounting/templates/accounting/reports/ar_aging.html
@@ -4,7 +4,9 @@
 {% block title %}{% trans "A/R Aging" %}{% endblock %}
 
 {% block content %}
-<div class="container-fluid">
+<div class="main-content">
+    <div class="page-content">
+        <div class="container-fluid">
     <div class="row mb-4">
         <div class="col-md-12">
             <div class="d-flex justify-content-between align-items-center">
@@ -132,5 +134,7 @@
             {% trans "Select an 'as of' date to produce the aging schedule." %}
         </div>
     {% endif %}
+        </div>
+    </div>
 </div>
 {% endblock %}
