--- a/ERP/accounting/templates/accounting/reports/income_statement.html
+++ b/ERP/accounting/templates/accounting/reports/income_statement.html
@@ -4,7 +4,9 @@
 {% block title %}{% trans "Profit & Loss Statement" %}{% endblock %}
 
 {% block content %}
-<div class="container-fluid">
+<div class="main-content">
+    <div class="page-content">
+        <div class="container-fluid">
     <!-- Header -->
     <div class="row mb-4">
         <div class="col-md-12">
@@ -166,5 +168,7 @@
             <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
         </div>
     {% endif %}
+        </div>
+    </div>
 </div>
 {% endblock %}
