--- a/ERP/accounting/templates/accounting/reports/profit_loss.html
+++ b/ERP/accounting/templates/accounting/reports/profit_loss.html
@@ -4,7 +4,9 @@
 {% block title %}{% trans "Profit & Loss" %}{% endblock %}
 
 {% block content %}
-<div class="container-fluid">
+<div class="main-content">
+    <div class="page-content">
+        <div class="container-fluid">
     <div class="row mb-4">
         <div class="col-md-12">
             <div class="d-flex justify-content-between align-items-center">
@@ -170,5 +172,7 @@
             {% trans "Select a start and end date to see the profit & loss statement." %}
         </div>
     {% endif %}
+        </div>
+    </div>
 </div>
 {% endblock %}
