--- a/ERP/accounting/templates/accounting/voucher_entry_backup.html
+++ b/ERP/accounting/templates/accounting/voucher_entry_backup.html
@@ -777,7 +777,9 @@ $(document).ready(function() {
 {% endblock %}
 
 {% block content %}
-<div class="container-fluid voucher-entry-container">
+<div class="main-content">
+    <div class="page-content">
+        <div class="container-fluid voucher-entry-container">
     <!-- Page Header -->
     <div class="d-sm-flex align-items-center justify-content-between mb-4">
         <h1 class="h3 mb-0 text-gray-800">
@@ -984,6 +986,8 @@ $(document).ready(function() {
             </p>
         </div>
     {% endif %}
+        </div>
+    </div>
 </div>
 
 <script>
