--- a/ERP/forms_designer/templates/forms_designer/designer.html
+++ b/ERP/forms_designer/templates/forms_designer/designer.html
@@ -33,7 +33,9 @@
 {% endblock %}
 
 {% block content %}
-<div class="container-fluid mt-4">
+<div class="main-content">
+    <div class="page-content">
+        <div class="container-fluid mt-4">
     <div class="row">
         <div class="col-md-3">
             <div class="card">
@@ -86,6 +88,9 @@
                     </form>
                 </div>
             </div>
+        </div>
+    </div>
+</div>
         </div>
     </div>
 </div>
