--- a/ERP/templates/pages/pages-maintenance.html
+++ b/ERP/templates/pages/pages-maintenance.html
@@ -6,6 +6,9 @@
 {% block left_sidebar %}
 {% endblock left_sidebar %}
 {% block content %}
+<div class="main-content">
+    <div class="page-content">
+        <div class="container-fluid">
             <div class="bg-soft-light min-vh-100 py-5">
                 <div class="py-4">
                     <div class="container">
@@ -21,7 +24,7 @@
                                     </div>
                                     <h3 class="mt-4">Site is Under Maintenance</h3>
                                     <p>Please check back in sometime.</p>
-        
+    
                                     <div class="mt-4">
                                         <div class="row">
                                             <div class="col-md-4">
@@ -84,6 +87,9 @@
                 </div>
             </div>
             <!-- end  -->
+        </div>
+    </div>
+</div>
 {% endblock content %}
 {% block footer %}
 {% endblock footer %}
