--- a/ERP/Inventory/templates/Inventory/base.html
+++ b/ERP/Inventory/templates/Inventory/base.html
@@ -4,9 +4,15 @@
 {% block title %}{% block inventory_title %}Inventory{% endblock %}{% endblock %}
 
 {% block content %}
-<div class="container mx-auto px-4 py-6">
-    {% include "Inventory/_messages.html" %}
-    {% block inventory_content %}
-    {% endblock %}
+<div class="main-content">
+    <div class="page-content">
+        <div class="container-fluid">
+            <div class="container mx-auto px-4 py-6">
+                {% include "Inventory/_messages.html" %}
+                {% block inventory_content %}
+                {% endblock %}
+            </div>
+        </div>
+    </div>
 </div>
 {% endblock %}
