--- a/ERP/accounting/templates/accounting/import/voucher_import.html
+++ b/ERP/accounting/templates/accounting/import/voucher_import.html
@@ -1,13 +1,17 @@
 {% extends "partials/base.html" %}
 {% block content %}
-<div class="container">
-    <h2>Import Vouchers</h2>
-    <form method="post" enctype="multipart/form-data" id="import-form">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" class="btn btn-primary">Import</button>
-    </form>
-    <div id="import-results" class="mt-4"></div>
+<div class="main-content">
+    <div class="page-content">
+        <div class="container">
+            <h2>Import Vouchers</h2>
+            <form method="post" enctype="multipart/form-data" id="import-form">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <button type="submit" class="btn btn-primary">Import</button>
+            </form>
+            <div id="import-results" class="mt-4"></div>
+        </div>
+    </div>
 </div>
 {% endblock %}
 {% block extra_js %}
