--- a/ERP/accounting/templates/accounting/reports/custom_report.html
+++ b/ERP/accounting/templates/accounting/reports/custom_report.html
@@ -4,7 +4,9 @@
 {% block title %}{{ definition.name }}{% endblock %}
 
 {% block content %}
-<div class="container-fluid">
+<div class="main-content">
+    <div class="page-content">
+        <div class="container-fluid">
     <div class="row mb-4">
         <div class="col-md-12">
             <div class="d-flex justify-content-between align-items-center">
@@ -131,5 +133,7 @@
             {% trans "Provide the required parameters above and run the report." %}
         </div>
     {% endif %}
+        </div>
+    </div>
 </div>
 {% endblock %}
