--- a/ERP/accounting/templates/accounting/reports/general_ledger.html
+++ b/ERP/accounting/templates/accounting/reports/general_ledger.html
@@ -4,7 +4,9 @@
 {% block title %}{% trans "General Ledger" %}{% endblock %}
 
 {% block content %}
-<div class="container-fluid">
+<div class="main-content">
+    <div class="page-content">
+        <div class="container-fluid">
     <div class="row mb-4">
         <div class="col-md-12">
             <div class="d-flex justify-content-between align-items-center">
@@ -189,5 +191,7 @@
             {% trans "Choose a date range and click Generate to see ledger activity." %}
         </div>
     {% endif %}
+        </div>
+    </div>
 </div>
 {% endblock %}
