--- a/ERP/accounting/templates/accounting/reports/report_list.html
+++ b/ERP/accounting/templates/accounting/reports/report_list.html
@@ -4,7 +4,9 @@
 {% block title %}{% trans "Financial Reports" %}{% endblock %}
 
 {% block content %}
-<div class="container-fluid">
+<div class="main-content">
+    <div class="page-content">
+        <div class="container-fluid">
     <div class="row mb-4">
         <div class="col-md-12">
             <h1 class="mb-4">
@@ -72,6 +74,8 @@
         {% endfor %}
     </div>
     {% endif %}
+        </div>
+    </div>
 </div>
 
 <style>
