--- a/ERP/accounting/templates/accounting/reports/trial_balance.html
+++ b/ERP/accounting/templates/accounting/reports/trial_balance.html
@@ -4,7 +4,9 @@
 {% block title %}{% trans "Trial Balance" %}{% endblock %}
 
 {% block content %}
-<div class="container-fluid">
+<div class="main-content">
+    <div class="page-content">
+        <div class="container-fluid">
     <div class="row mb-4">
         <div class="col-md-12">
             <div class="d-flex justify-content-between align-items-center">
@@ -164,5 +166,7 @@
             {% trans "Choose an 'as of' date and click Generate to produce the trial balance." %}
         </div>
     {% endif %}
+        </div>
+    </div>
 </div>
 {% endblock %}
