--- a/ERP/accounting/templates/accounting/voucher_confirm_delete.html
+++ b/ERP/accounting/templates/accounting/voucher_confirm_delete.html
@@ -4,7 +4,9 @@
 {% block title %}{{ page_title }}{% endblock %}
 
 {% block content %}
-<div class="container-fluid">
+<div class="main-content">
+    <div class="page-content">
+        <div class="container-fluid">
     <!-- Page Heading -->
     <div class="d-sm-flex align-items-center justify-content-between mb-4">
         <h1 class="h3 mb-0 text-gray-800">{{ page_title }}</h1>
@@ -86,6 +88,9 @@
                     </form>
                 </div>
             </div>
+        </div>
+    </div>
+</div>
         </div>
     </div>
 </div>
