--- a/ERP/accounting/templates/accounting/voucher_list.html
+++ b/ERP/accounting/templates/accounting/voucher_list.html
@@ -30,7 +30,9 @@
 {% endblock %}
 
 {% block content %}
-<div class="container-fluid">
+<div class="main-content">
+    <div class="page-content">
+        <div class="container-fluid">
     <!-- Page Heading -->
     <div class="d-sm-flex align-items-center justify-content-between mb-4">
         <h1 class="h3 mb-0 text-gray-800">{{ page_title }}</h1>
@@ -197,6 +199,9 @@
                     {% endif %}
                 </div>
             {% endif %}
+        </div>
+    </div>
+</div>
         </div>
     </div>
 </div>
