--- a/ERP/forms_designer/templates/forms_designer/preview_form.html
+++ b/ERP/forms_designer/templates/forms_designer/preview_form.html
@@ -2,7 +2,9 @@
 {% load static %}
 
 {% block content %}
-<div class="container mt-4">
+<div class="main-content">
+    <div class="page-content">
+        <div class="container mt-4">
     <div class="card">
         <div class="card-header">
             <h2 class="mb-0">Preview: {{ config.name }}</h2>
@@ -61,5 +63,7 @@
         </div>
     </div>
 </div>
-
+        </div>
+    </div>
+</div>
 {% endblock %}
