--- a/ERP/templates/account/billing.html
+++ b/ERP/templates/account/billing.html
@@ -1,5 +1,11 @@
 {% extends 'partials/base.html' %}
 {% block title %}Billing{% endblock title %}
 {% block content %}
-<h1>Billing Page</h1>
+<div class="main-content">
+    <div class="page-content">
+        <div class="container-fluid">
+            <h1>Billing Page</h1>
+        </div>
+    </div>
+</div>
 {% endblock content %}
