--- a/ERP/templates/partials/base.html
+++ b/ERP/templates/partials/base.html
@@ -9,7 +9,7 @@
     <meta content="Premium Multipurpose Admin & Dashboard Template" name="description" />
     <meta content="Themesdesign" name="author" />
     <!-- App favicon -->
-    <link rel="shortcut icon" href="{% static 'images/favicon.ico'%}">
+    <link rel="shortcut icon" href="{{ branding.favicon_url }}">
 
     {% block css %}
     {% block extra_css %}
